Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjNumber.quorum
class Main
    action Main
        Integer v
        v:SetValue(Test())
    end

    action Test() returns Integer
        number var = 5.0
        return var
    end
end